# ComIT-ViribusHack

./: .dockerignore  .drone.yml  .env.example  .gitattributes  .gitignore  README.md  aa.txt  algo.md  docker-compose.yml  docs.md  main.py  nginx.conf  requirements.txt  ruff.toml
ML/: .dockerignore  Dockerfile  README.md  api_server.py  docker-entrypoint.sh
ML/Hack/: README.md  pyproject.toml
ML/Hack/config/: settings.yaml
ML/Hack/scripts/: train_models.py
ML/Hack/src/student_recsys/: embeddings.py  evaluation.py  features.py  schema.py
ML/Hack/src/student_recsys.egg-info/: PKG-INFO
PulseCore/: .dockerignore  README.md  config.py  docker-compose.yml  docs.md  main.py
QmsgCore/: README.md
admin-panel/: Dockerfile  entrypoint.sh  manage.py  requirements.txt
agents/: agent_registry.py  base_agent.py  prompts.py
backend/: .coverage  Dockerfile  __init__.py  alembic.ini  docker-entrypoint.sh  main.py  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py
deploy/: README-prod-domains.md  nginx-comit.conf
docs/: database-schema.md
frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  package-lock.json  package.json  vite.config.js
frontend_analytics/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
hackathon-parser/: Dockerfile  requirements.txt
openapi/: openapi.yaml
pipelines/: comit_agent_pipeline.py  comit_search_pipeline.py  idea_generation_pipeline.py  idea_refinement_pipeline.py
routes/: Comit_chat.py  chat.py  history.py  tasks.py
scripts/: json_recommendations_to_csv.py
src/: App.jsx  (+2 more)
(+368 files in other folders)
