[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-recsys"
version = "0.1.0"
description = "X-style recommendation system for a student opportunity feed."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.4.0",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.0",
  "requests>=2.32.0",
  "scikit-learn>=1.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
